# RFI_scanner

./: .gitignore  README.md  README.rst  pyproject.toml  setup.bash
docs/: Config.md  Making_a_measurement.md  starting_the_RFISc.rst
src/: rfi_scanner.service
src/notebooks/: Analogue_chain_gain_cal.ipynb  PC_control.ipynb  gain_cal.ipynb
src/rfi_scanner/: config.json  pi_ctrl.py  scanner_api.py
src/rfi_scanner/config/: config.json  gain_cal.csv
src/rfi_scanner/scans/: scans.txt
tests/: light_test.py  test_gpio.py
