[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "RFI_scanner"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "time",
    "os",
    "sys",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0"
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]


[project.optional-dependencies]
pi4 = ["RPi.GPIO>=0.7.0",]
test = 
