[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "RFI_scanner"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "time",
    "os",
    "h5py",
    "rpi-lgpio",
    "pyserial",
    "sys",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "flask">=3.1.0"
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]


 